# HardNet_TensorRT

./: .gitignore  README.md  README.txt  inference_CAPI_img.sh  inference_FCHardNET_TRT_ROS.py  inference_PYCUDA_img.sh
FCHarDNet_TRT_ENGINE_BUILD/: engine_build.sh
FCHarDNet_TRT_ENGINE_BUILD/TRT_ENGINE/: engine_build_script.sh  engine_build_script_dynamic.sh  torch_to_onnx.py  torch_to_onnx_ORIGINAL.py
FCHarDNet_TRT_ENGINE_BUILD/TRT_ENGINE/configs/: hardnet.yml  hardnet_val.yml
FCHarDNet_TRT_ENGINE_BUILD/TRT_ENGINE/ptsemseg/loader/: cityscapes_loader.py
FCHarDNet_TRT_ENGINE_BUILD/TRT_ENGINE/ptsemseg/models/: __init__.py  hardnet.py  hardnet_val.py
INFERENCE_CAPI/: CMakeLists.txt  build_FCHardNet.sh  main.cpp
INFERENCE_CAPI/include/: configs.h
INFERENCE_CAPI/tensorRTWrapper/code/: CMakeLists.txt
INFERENCE_CAPI/tensorRTWrapper/code/include/: TrtNet.h
INFERENCE_CAPI/tensorRTWrapper/code/src/: TrtNet.cpp
INFERENCE_PYCUDA/: inference_pycuda_CLEAN.py  inference_pycuda_dynamic.py
INFERENCE_PYCUDA/loader/: __init__.py  cityscapes_loader.py
